# BlockType

./: .clang-tidy  .gitignore  CMakeLists.txt  cmake_test_discovery_2542e19704.json  refactor_state.json  refactor_workflow.sh  test_results.xml
.codebuddy/: instructions.md
cmake/: AI.cmake  CompilerOptions.cmake  GTest.cmake
docs/: AI_API.md  AI_USAGE.md  CPP23-CPP26-FEATURES.md  PHASE0.6_STATUS.md  PHASE0_STATUS.md  PHASE1_AUDIT.md  PHASE1_STATUS.md  PHASE3-AUDIT.md  PHASE3-GAP-ANALYSIS.md  PHASE3-PLAN.md  TEST_BASELINE.md  UNICODE_SUPPORT_DESIGN.md  UNICODE_UPDATE_STRATEGY.md  开发-前中后-三阶段-核查要求.md
refactor_checklists/: dev_A.1.1.json  dev_A.1.json  dev_A.2.json  dev_A.3.1.json  dev_A.3.json  dev_A.4.json  review_A.1.1.json  review_A.2.json  review_A.3.1.json  review_A.3.json  review_A.4.json  review_issues_A.3.md
scripts/: generate_unicode_data.py  review_quick.sh
src/AI/: AIOrchestrator.cpp  CMakeLists.txt  ClaudeProvider.cpp  ConcurrentRequest.cpp  ConnectionPool.cpp  CostTracker.cpp  HTTPClient.cpp  LocalProvider.cpp  OpenAIProvider.cpp  QwenProvider.cpp  ResponseCache.cpp
src/AST/: ASTContext.cpp  ASTDumper.cpp  CMakeLists.txt  Decl.cpp  DeclContext.cpp  Expr.cpp  ReflectionTypes.cpp  Stmt.cpp  StmtCloner.cpp  Type.cpp
src/Backend/: BackendBase.cpp  BackendRegistry.cpp  CMakeLists.txt  CodeViewEmitter.cpp  DeclRuleEngine.cpp  FFIPythonGenerator.cpp  FFIRustMapper.cpp  FFIWasmComponent.cpp  FFIWasmMapper.cpp  IRToLLVMConverter.cpp  ISLEParser.cpp  LLVMBackend.cpp  RegisterAllocator.cpp
src/Basic/: CMakeLists.txt  Diagnostics.cpp  SourceManager.cpp  UTF8Validator.cpp  Unicode.cpp
src/CodeGen/: CGCXX.cpp  CGDebugInfo.cpp  CMakeLists.txt  CodeGenConstant.cpp  CodeGenExpr.cpp  CodeGenFunction.cpp  CodeGenModule.cpp  CodeGenStmt.cpp  CodeGenTypes.cpp  LambdaCodeGen.cpp  Mangler.cpp  TargetInfo.cpp
src/Frontend/: ASTToIRConverter.cpp  CMakeLists.txt  CacheCleaner.cpp  CacheStatsCollector.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  CppFrontend.cpp  CppFrontendRegistration.cpp  FrontendBase.cpp  IRDebugInfoEmitter.cpp  IREmitCXXCtorDtor.cpp  IREmitCXXInherit.cpp  IREmitCXXLayout.cpp  IREmitCXXMain.cpp  IREmitCXXVTable.cpp  IREmitExpr.cpp  IREmitStmt.cpp  IRMangler.cpp  IRTypeMapper.cpp  IncrementalBuildIntegration.cpp
src/IR/: AIAutoTuner.cpp  BackendCapability.cpp  CMakeLists.txt  DependencyGraph.cpp  DiagnosticCrossRef.cpp  IRBasicBlock.cpp  IRBuilder.cpp  IRConstant.cpp  IRContext.cpp  IRDebugInfo.cpp  IRDebugMetadata.cpp  IRDiagnostic.cpp  IREquivalenceChecker.cpp  IRFFI.cpp  IRFunction.cpp  IRInstruction.cpp  IRIntegrity.cpp  IRModule.cpp  IRPass.cpp  IRSerializer.cpp  IRStatistics.cpp  IRTypeContext.cpp  IRVerifier.cpp  PassInvariantChecker.cpp  ProjectionQuery.cpp  QueryCacheSerializer.cpp  QueryContext.cpp  RedGreenMarker.cpp  StableDefPath.cpp  SymbolicExecutor.cpp  TargetLayout.cpp  raw_ostream.cpp
src/IR/Cache/: IRCache.cpp
src/IR/Telemetry/: IRTelemetry.cpp
src/Lex/: CMakeLists.txt  HeaderSearch.cpp  Lexer.cpp  Preprocessor.cpp
src/Parse/: CMakeLists.txt  OperatorPrecedence.cpp  ParseClass.cpp  ParseDecl.cpp  ParseDeclSpec.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseStmt.cpp  ParseStmtCXX.cpp  ParseTemplate.cpp  ParseType.cpp  Parser.cpp
src/Sema/: AccessControl.cpp  CMakeLists.txt  ConstantExpr.cpp  ConstraintSatisfaction.cpp  Conversion.cpp  ExceptionAnalysis.cpp  LambdaAnalysis.cpp  Lookup.cpp  ModuleFragment.cpp  ModulePartition.cpp  ModuleTypeCheck.cpp  ModuleVisibility.cpp  Overload.cpp  Scope.cpp  Sema.cpp  SemaCXX.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaReflection.cpp  SemaTemplate.cpp  SymbolTable.cpp  TemplateDeduction.cpp  TemplateInstantiation.cpp  TemplateInstantiator.cpp  TypeCheck.cpp  TypeDeduction.cpp
src/Unicode/: CMakeLists.txt  Normalization.cpp  UTF8.cpp  UnicodeData.cpp
tests/: debug_2d_array.cpp  debug_for_binding.cpp  (+18 more)
tests/benchmark/: CMakeLists.txt  ParserBenchmark.cpp
tests/integration/: CMakeLists.txt
tests/integration/AI/: ProviderIntegrationTest.cpp
tests/integration/backend/: BackendIntegrationTest.cpp
tests/integration/pipeline/: D3FallbackTest.cpp
tests/unit/: CMakeLists.txt  PerformanceTest.cpp
tests/unit/AI/: AIOrchestratorTest.cpp  CostTrackerTest.cpp  ResponseCacheTest.cpp
tests/unit/AST/: ASTTest.cpp  CMakeLists.txt  Stage71Test.cpp  Stage72Test.cpp
tests/unit/Backend/: BackendBaseTest.cpp  BackendInterfacesTest.cpp  CMakeLists.txt  CodeViewEmitterTest.cpp  IRToLLVMConverterTest.cpp
tests/unit/Basic/: CMakeLists.txt  FixItHintTest.cpp  SourceLocationTest.cpp  UTF8ValidatorTest.cpp
tests/unit/CodeGen/: CMakeLists.txt  CodeGenClassTest.cpp  CodeGenConstantTest.cpp  CodeGenDebugInfoTest.cpp  CodeGenExprTest.cpp  CodeGenFunctionTest.cpp  CodeGenStmtTest.cpp  CodeGenTypesTest.cpp  ManglerTest.cpp  OptimizationTest.cpp  TargetOptimizationTest.cpp
tests/unit/Frontend/: CMakeLists.txt  CompilerInvocationTest.cpp  CppFrontendTest.cpp  FrontendBaseTest.cpp  IREmitCXXTest.cpp  IREmitExprTest.cpp  IREmitStmtTest.cpp  IRManglerTest.cpp  IRTypeMapperTest.cpp  InfrastructureSharingTest.cpp
tests/unit/IR/: CMakeLists.txt  IRBackendCapabilityTest.cpp  IRBuilderTest.cpp  IRCacheTest.cpp  IRDebugInfoTest.cpp  IRDiagnosticTest.cpp  IREquivalenceCheckerTest.cpp  IRFFITest.cpp  IRSerializerTest.cpp  IRVerifierTest.cpp
tests/unit/Lex/: BoundaryCaseTest.cpp  CMakeLists.txt  EscapeSequenceTest.cpp  LexerExtensionTest.cpp  LexerFixTest.cpp  LexerMediumPriorityTest.cpp  LexerTest.cpp  MediumPriorityFixesTest.cpp  PreprocessorTest.cpp  TokenTest.cpp
tests/unit/Module/: CMakeLists.txt  ModuleManagerTest.cpp
tests/unit/Parse/: CMakeLists.txt  ConceptTemplateParamTest.cpp  DeclarationTest.cpp  ErrorRecoveryTest.cpp  ParserTest.cpp  StatementTest.cpp
tests/unit/Sema/: AccessControlTest.cpp  CMakeLists.txt  ConceptTest.cpp  ConstantExprTest.cpp  IndeterminateAttrTest.cpp  NameLookupTest.cpp  OverloadResolutionTest.cpp  SFINAETest.cpp  SemaTest.cpp  SymbolTableTest.cpp  TemplateDeductionTest.cpp  TemplateInstantiationTest.cpp  TriviallyRelocatableTest.cpp  TypeCheckTest.cpp  VariadicTemplateTest.cpp
(+484 files in other folders)
