add_library(blocktype-sema
  AccessControl.cpp
  ConstantExpr.cpp
  ConstraintSatisfaction.cpp
  Conversion.cpp
  Lookup.cpp
  Overload.cpp
  Scope.cpp
  Sema.cpp
  SemaCXX.cpp
  SemaReflection.cpp
  SemaTemplate.cpp
  SymbolTable.cpp
  TemplateDeduction.cpp
  TemplateInstantiation.cpp
  TemplateInstantiator.cpp
  TypeCheck.cpp
  TypeDeduction.cpp
)

target_link_libraries(blocktype-sema
  PUBLIC
    blocktype-ast
)